force-app/main/default/objects/fboost__B_BoostSettings__c/fboost__B_BoostSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Boost Settings</description>
    <label>Boost Settings</label>
</CustomObject>