force-app/main/default/objects/fboost__B_BoostSettings__c/fields/fboost__ApexClassInstanceProvider__c.field-meta.xml
<CustomField>
    <fullName>fboost__ApexClassInstanceProvider__c</fullName>
    <description>Allows to add custom Apex Class instance creator. Please provide class name that implements BoostPlugins.ApexClassInstanceProvider interface</description>
    <inlineHelpText>AAllows to add custom Apex Class instance creator. Please provide class name that implements BoostPlugins.ApexClassInstanceProvider interface</inlineHelpText>
    <label>Apex Class Instance Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>