force-app/main/default/objects/fboost__B_BoostSettings__c/fields/fboost__AsyncExecutionStrategyProvider__c.field-meta.xml
<CustomField>
    <fullName>fboost__AsyncExecutionStrategyProvider__c</fullName>
    <description>Allows to add custom AsyncExecutionStrategy handlers. Please provide class name that implements BoostPlugins.AsyncExecutionStrategyProvider interface</description>
    <inlineHelpText>Allows to add custom AsyncExecutionStrategy handlers. Please provide class name that implements BoostPlugins.AsyncExecutionStrategyProvider interface</inlineHelpText>
    <label>Async Execution Strategy Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>