force-app/main/default/objects/fboost__B_BoostSettings__c/fields/fboost__AsyncJobsLogsLevel__c.field-meta.xml
<CustomField>
    <fullName>fboost__AsyncJobsLogsLevel__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Defines Async Jobs Logs level: 0 - no logs, 1 - basic logs from Async Job Event trigger, 2 - enables logs and metrics about Async Job execution</description>
    <label>Async Jobs Logs Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>