force-app/main/default/objects/fboost__B_BoostSettings__c/fields/fboost__AsyncThresholdForAsyncJobExecution__c.field-meta.xml
<CustomField>
    <fullName>fboost__AsyncThresholdForAsyncJobExecution__c</fullName>
    <defaultValue>90</defaultValue>
    <description>Async Threshold for Async Jobs real-time execution. System will wait with processing till Platform Async Limit will go lower then provided threshold</description>
    <inlineHelpText>Async Threshold for Async Jobs real-time execution. System will wait with processing till Platform Async Limit will go lower then provided threshold</inlineHelpText>
    <label>Async Threshold for Async Jobs Execution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>