force-app/main/default/objects/fboost__B_BoostSettings__c/fields/fboost__DefaultAddToQueue__c.field-meta.xml
<CustomField>
    <fullName>fboost__DefaultAddToQueue__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Default value for the Functional steps &apos;Add To Queue&apos; parameter</description>
    <inlineHelpText>Default value for the Functional steps &apos;Add To Queue&apos; parameter</inlineHelpText>
    <label>Add To Queue - Default Value</label>
    <type>Checkbox</type>
</CustomField>