force-app/main/default/objects/fboost__B_BoostSettings__c/fields/fboost__DefaultAsyncStrategy__c.field-meta.xml
<CustomField>
    <fullName>fboost__DefaultAsyncStrategy__c</fullName>
    <defaultValue>&apos;MultiQueueable&apos;</defaultValue>
    <description>Determines Default async strategy for Async Job processing</description>
    <inlineHelpText>Determines Default async strategy for Async Job processing</inlineHelpText>
    <label>Default Async Strategy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>