force-app/main/default/objects/fboost__B_BoostSettings__c/fields/fboost__DelayedAsyncJobsProcessingInterval__c.field-meta.xml
<CustomField>
    <fullName>fboost__DelayedAsyncJobsProcessingInterval__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Determines delayed async jobs processing interval in minutes. Available values: 5, 10, 15, 30, 60</description>
    <inlineHelpText>Determines delayed async jobs processing interval in minutes. Available values: 5, 10, 15, 30, 60</inlineHelpText>
    <label>Delayed Async Jobs Processing Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>