force-app/main/default/objects/fboost__B_BoostSettings__c/fields/fboost__EnableMetrics__c.field-meta.xml
<CustomField>
    <fullName>fboost__EnableMetrics__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables system metrics measurement</description>
    <inlineHelpText>Enables system metrics measurement</inlineHelpText>
    <label>Enable Metrics</label>
    <type>Checkbox</type>
</CustomField>