force-app/main/default/objects/fboost__B_BoostSettings__c/fields/fboost__ExecutionDelay__c.field-meta.xml
<CustomField>
    <fullName>fboost__ExecutionDelay__c</fullName>
    <defaultValue>&apos;0=0,1=0,2=120000,3=600000,4=1800000,5=7200000,6=7200000,7=7200000&apos;</defaultValue>
    <description>Async Jobs executions delay, allows to configure delays in MS for each execution attempt</description>
    <inlineHelpText>Async Jobs executions delay, allows to configure delays in MS for each execution attempt</inlineHelpText>
    <label>Execution Delay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>