force-app/main/default/objects/fboost__B_BoostSettings__c/fields/fboost__FeatureToggleService__c.field-meta.xml
<CustomField>
    <fullName>fboost__FeatureToggleService__c</fullName>
    <description>Feature Toggle Service is used to enable or disable different system functionalities. Please provide a class name that implements BoostPlugins.FeatureToggleService interface</description>
    <inlineHelpText>Feature Toggle Service is used to enable or disable different system functionalities. Please provide a class name that implements BoostPlugins.FeatureToggleService interface</inlineHelpText>
    <label>Feature Toggle Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>