force-app/main/default/objects/fboost__B_BoostSettings__c/fields/fboost__LimitedAsyncJobsProcessingInterval__c.field-meta.xml
<CustomField>
    <fullName>fboost__LimitedAsyncJobsProcessingInterval__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Determines processing interval in minutes for reprocessing of async jobs that are waiting for processing because of Async Limit. Available values: 5, 10, 15, 30, 60</description>
    <inlineHelpText>Determines processing interval in minutes for reprocessing of async jobs that are waiting for processing because of Async Limit. Available values: 5, 10, 15, 30, 60</inlineHelpText>
    <label>Limited Async Jobs Processing Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>