force-app/main/default/objects/fboost__B_BoostSettings__c/fields/fboost__LogsLifespan__c.field-meta.xml
<CustomField>
    <fullName>fboost__LogsLifespan__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Logs Lifespan in days. The system will automatically remove Logs records after a provided number of days</description>
    <inlineHelpText>Logs Lifespan in days. The system will automatically remove Logs records after a provided number of days</inlineHelpText>
    <label>Logs Lifespan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>