force-app/main/default/objects/fboost__B_BoostSettings__c/fields/fboost__MaxFailedTryCount__c.field-meta.xml
<CustomField>
    <fullName>fboost__MaxFailedTryCount__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Max number of Async Jobs re-processing</description>
    <inlineHelpText>Max number of Async Jobs re-processing</inlineHelpText>
    <label>Max Failed Try Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>