force-app/main/default/objects/fboost__B_BoostSettings__c/fields/fboost__MetricsCleanUpJobInterval__c.field-meta.xml
<CustomField>
    <fullName>fboost__MetricsCleanUpJobInterval__c</fullName>
    <defaultValue>12</defaultValue>
    <description>Determines Boost Metrics clean-up job interval in hours. Available values: 1, 2, 3, 4, 6, 8, 12</description>
    <inlineHelpText>Determines Boost Metrics clean-up job interval in hours. Available values: 1, 2, 3, 4, 6, 8, 12</inlineHelpText>
    <label>Boost Metrics Clean-Up Job Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>