force-app/main/default/objects/fboost__B_BoostSettings__c/fields/fboost__MetricsLifespan__c.field-meta.xml
<CustomField>
    <fullName>fboost__MetricsLifespan__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Metrics Lifespan in days. The system will automatically remove Metrics records after a provided number of days</description>
    <inlineHelpText>Metrics Lifespan in days. The system will automatically remove Metrics records after a provided number of days</inlineHelpText>
    <label>Metrics Lifespan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>