force-app/main/default/objects/fboost__B_BoostSettings__c/fields/fboost__NumberOfSchedulerWorkerJobs__c.field-meta.xml
<CustomField>
    <fullName>fboost__NumberOfSchedulerWorkerJobs__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Defines the number of jobs that single Scheduler worker can process.</description>
    <inlineHelpText>Defines the number of jobs that single Scheduler worker can process.</inlineHelpText>
    <label>Number Of Scheduler Worker Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>