force-app/main/default/objects/fboost__B_BoostSettings__c/fields/fboost__NumberOfSchedulerWorkers__c.field-meta.xml
<CustomField>
    <fullName>fboost__NumberOfSchedulerWorkers__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Defines the number of running parallel Scheduler workers.</description>
    <inlineHelpText>Defines the number of running parallel Scheduler workers.</inlineHelpText>
    <label>Number Of Scheduler Workers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>