force-app/main/default/objects/fboost__B_BoostSettings__c/fields/fboost__SchedulerInterval__c.field-meta.xml
<CustomField>
    <fullName>fboost__SchedulerInterval__c</fullName>
    <defaultValue>2</defaultValue>
    <description>Defines the interval between Scheduler workers execution [in minutes]</description>
    <inlineHelpText>Defines the interval between Scheduler workers execution [in minutes]</inlineHelpText>
    <label>Scheduler Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>