force-app/main/default/objects/fboost__B_BoostSettings__c/fields/fboost__SchedulerIntervalHandlerProvider__c.field-meta.xml
<CustomField>
    <fullName>fboost__SchedulerIntervalHandlerProvider__c</fullName>
    <description>Allow to add additional Interval Handlers. Please provide class name that implements BoostPlugins.SchedulerCustomIntervalHandlerProvider interface</description>
    <inlineHelpText>Allow to add additional Interval Handlers. Please provide class name that implements BoostPlugins.SchedulerCustomIntervalHandlerProvider interface</inlineHelpText>
    <label>Scheduler Interval Handler Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>